# RandLAPACK

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  INSTALL.md  INSTALL_SCRIPT.md  LICENSE  README.md  RandLAPACK.hh  install.sh
RandLAPACK/: CMakeLists.txt  rl_blaspp.hh  rl_config.hh.in  rl_cuda_kernels.hh  rl_cuda_macros.hh  rl_cusolver.hh  rl_exceptions.hh  rl_gen.hh  rl_lapackpp.hh
RandLAPACK/comps/: rl_bk.hh  rl_determiter.hh  rl_hutchinson.hh  rl_lanczos_fa.hh  rl_lanczos_fa_block.hh  rl_matfun.hh  rl_orth.hh  rl_preconditioners.hh  rl_qb.hh  rl_rf.hh  rl_rpchol.hh  rl_rs.hh  rl_syps.hh  rl_syrf.hh  rl_util.hh
RandLAPACK/drivers/: hqrrp.cc  rl_abrik.hh  rl_bqrrp.hh  rl_bqrrp_gpu.hh  rl_cholqr_linops.hh  rl_cholqrcp.hh  rl_cqrrp.hh  rl_cqrrp_gpu.hh  rl_cqrrpt.hh  rl_cqrrpt_gpu.hh  rl_cqrrt.hh  rl_cqrrt_linops.hh  rl_fun_nystrom_pp.hh  rl_fun_nystrom_pp_v2.hh  rl_hqrrp.hh  rl_iter_refine_lsq.hh  rl_krill.hh  rl_krillx.hh  rl_nysbki.hh  rl_nystrom_evd.hh  rl_nystrom_evd_v2.hh  rl_qrbbrp.hh  rl_rbki.hh  rl_revd2.hh  rl_rsvd.hh  rl_scholqr3_linops.hh
RandLAPACK/gpu_functions/: rl_cuda_kernels.cuh  rl_cuda_macros.hh  rl_cusolver.hh
RandLAPACK/linops/: rl_composite_linop.hh  rl_concepts.hh  rl_dense_linop.hh  rl_downdatable_linop.hh  rl_kronecker_linop.hh  rl_linops.hh  rl_materialize.hh  rl_matfun_linops.hh  rl_regularized_linop.hh  rl_sparse_linop.hh  rl_sparse_views.hh  rl_svd_residual.hh  rl_sym_linops.hh
RandLAPACK/misc/: rl_gen.hh  rl_linops.hh  rl_memory_tracker.hh  rl_pdkernels.hh  rl_util.hh  rl_util_test.hh  rl_util_test_linop.hh
RandLAPACK/testing/: rl_gen.hh  rl_generate_dense_spd.hh  rl_generate_sparse_spd.hh  rl_matrix_io.hh  rl_memory_tracker.hh  rl_test_utils.hh
RandLAPACK/util/: rl_util.hh
RandLAPACK/verification/: rl_test_utils.hh
benchmark/: CHOLQR_vs_GEQRF.cc  CMakeLists.txt  CQRRPT_accuracy.cc  CQRRPT_cond_orth_effect.cc  CQRRPT_embedding_speed_effect.cc  CQRRPT_inner_speed.cc  CQRRPT_inner_speed_process.cc  CQRRPT_speed.cc  CQRRPT_vs_HQRRP_flops.cc  CQRRPT_vs_HQRRP_speed.cc  CQRRP_accuracy.cc  CQRRP_block_per_time.cc  CQRRP_inner_speed.cc  CQRRP_speed_comparisons.cc  CholQRCP_accuracy.cc  CholQRCP_embedding_speed_effect.cc  CholQRCP_inner_comp.cc  CholQRCP_inner_speed.cc  CholQRCP_inner_speed_process.cc  CholQRCP_speed.cc  CholQRCP_vs_HQRRP_speed.cc  CholQR_cond_orth_effect.cc  Chol_check.cc  FLOP_count.cc  FLOP_data.cc  FLOP_data_hqrrp.cc  Full_QR_restoration.cc  GEMM_flop_count.cc  Gemm_vs_ormqr.cc  Orth_speed.cc  QB_cond_nums.cc  QR_accuracy_stability_analysis.cc  QR_flops.cc  QR_speed.cc  QR_speed_basic.cc  cqrrpt_accuracy.cc  cqrrpt_embedding_speed_effect.cc  cqrrpt_inner_speed.cc  cqrrpt_speed.cc  cqrrpt_vs_HQRRP_speed.cc
benchmark/bench_ABRIK/: ABRIK_accuracy_analysis.cc  ABRIK_runtime_breakdown.cc  ABRIK_runtime_breakdown_sparse.cc  ABRIK_speed_comparisons.cc  ABRIK_speed_comparisons_sparse.cc  BudgetedSVDSolver.hh  bench_matrix_io.hh
benchmark/bench_BQRRP/: BQRRP_GPU_benchmark.cu  BQRRP_error_analysis.cc  BQRRP_pivot_quality.cc  BQRRP_runtime_breakdown.cc  BQRRP_speed_comparisons.cc  BQRRP_speed_comparisons_block_size.cc  BQRRP_speed_comparisons_mat_size.cc  BQRRP_subroutines_speed.cc  HQRRP_runtime_breakdown.cc  HQRRP_sanity_check.cc  Kahan_spectrum.cc  find_test_mat_spectrum.cc
benchmark/bench_CQRRP/: CQRRP_Apple_runtime_breakdown.cc  CQRRP_decisions_speed_benchmark.cc  CQRRP_linear_solver.cc  CQRRP_pivot_quality.cc  CQRRP_runtime_breakdown.cc  CQRRP_single_precision.cc  CQRRP_speed_comparisons.cc  HQRRP_runtime_breakdown.cc  ICQRRP_subroutines_speed.cc  QR_speed_comp.cc
benchmark/bench_CQRRPT/: CQRRPT_accuracy.cc  CQRRPT_error_analysis.cc  CQRRPT_inner_speed.cc  CQRRPT_pivot_quality.cc  CQRRPT_runtime_breakdown.cc  CQRRPT_speed_comparisons.cc
benchmark/bench_CQRRT_linops/: CQRRT_diagnostic.cc  CQRRT_linop_applications.cc  CQRRT_linop_basic.cc  CQRRT_linop_composite_applications.cc  CQRRT_linop_composite_applications_v2.cc  CQRRT_linop_nmr.cc  CQRRT_linops_conditioning.cc  CQRRT_linops_runtime.cc  CQRRT_linops_scaling.cc  CQRRT_linops_simple.cc  CQRRT_orth_gap.cc  GSVD_benchmark.cc  cqrrt_bench_common.hh  diagnose_cholesky.cc  diagonal_regularization.cc  generate_banded_spd.cc  generate_dense_spd.cc  generate_sparse_spd.cc  generate_spd_matrices.cc  perturb_1138_bus.cc  test_sparse_cholesky.cc  verify_matrix_file.cc  verify_spd_generation.cc
benchmark/bench_FunNystromPP/: FunNystromPP_benchmark.cc  load_mtx.hh
benchmark/bench_FunNystromPP_v2/: FunNystromPP_v2_benchmark.cc
benchmark/bench_KRILL/: krill_simple.cc  logging.txt
benchmark/bench_RBKI/: RBKI_runtime_benchmark.cc  RBKI_runtime_breakdown.cc  RBKI_speed.cc  RBKI_speed_comparisons.cc  RBKI_speed_comparisons_SVDS.cc  RBKI_speed_comparisons_just_RBKI.cc  RBKI_speed_comparisons_sparse.cc
benchmark/bench_general/: Chol_check.cc  GEMM_flop_count.cc  GEQRF_flop_count.cc  Gemm_vs_ormqr.cc  LAPACK_flop_count.cc  basic_blas_speed.cc  convert_time.cc
benchmark/bench_kernelalgs/: kernelbench_common.hh  kpca.cc  krr.cc  logging.txt
benchmark/test/: RandLAPACK_tests[1]_include.cmake
demos/: CMakeLists.txt  README.md  rchol_3d_laplace.cc  rchol_laplace.cc  rchol_laplace_parallel.cc  rchol_nys_pinv.cc  rchol_shift_nys_inv.cc
demos/demos/: dummy.cc
demos/richol/: bench_factor.cc  bench_pinv.cc  demo_factor.cc  demo_gremban.cc  demo_linsolve.cc  demo_pinv.cc  demo_solve.cc  richol.hh  richol_core.hh  richol_dd.hh  richol_demo.cc  richol_linops.hh  richol_mkl.hh  stage_openfoam_testcase.cc
demos/sparse-data-matrices/: tiny10x10_sdd.mtx
demos/test/: CMakeLists.txt  gen_test_matrix.cc  test_old_gen_spd.cc
extras/test/: CMakeLists.txt
prototyping/: CMakeLists.txt  batch_qr_demo.cc  incantations.md  qrbbrp_qp3_demo.cc  set_block_pivot_vector.cc
prototyping/python/: CMakeLists.txt  pydemo.py  qrbbrp_bind.cc
src/: CMakeLists.txt
src/comps/: determiter.cc  orth.cc  preconditioners.cc  qb.cc  rf.cc  rs.cc  util.cc
src/drivers/: cholqrcp.cc  rsvd.cc
test/: CMakeLists.txt  moremats.hh
test/comps/: test_determiter.cc  test_lanczos_fa.cc  test_orth.cc  (+9 more)
(+170 files in other folders)
